# comps-sif-constructor

./: README.md  pyproject.toml  test_endpoints.sh  vendor_packages.py
.github/workflows/: publish-pypi.yml
examples/laser/: laser.def
examples/lolcow/: README.md  lolcow.def
examples/pyproject/: README.md  pyproject.def  pyproject.toml
examples/python/: README.md  python.def  python.sif  remote.py  run.py  run.sh  trials.jsonl
src/comps_sif_constructor/: __init__.py  cli.py  create_sif.py  gather.py  launch.py  version.py
